# synapse-admin-client

./: Cargo.toml  README.md
src/: account_validity.rs  background_updates.rs  event_reports.rs  lib.rs  media.rs  purge_history.rs  registration_tokens.rs  room_membership.rs  rooms.rs  server_notices.rs  server_version.rs  statistics.rs
src/background_updates/: enabled.rs  get.rs  run.rs
src/event_reports/: get.rs  get_all.rs
src/media/: delete.rs  purge.rs  quarantine.rs  query.rs
src/rooms/: admin.rs  block.rs  delete.rs  event_context.rs  extremities.rs  list.rs  members.rs  messages.rs  room_details.rs  state.rs  timestamp_to_event.rs
